tdf#92446: Revert apparently bogus attempt at fixing a memory leak

6b4c596b01039324cfe78f38c4e3ffb9080bcd34 "Fix memory leak for BASIC sub (as well
as void function)," from just looking at the few lines of code in isolation, and
their revision history, looked like a plausible and effective approach to fix
the leaks reported by CppunitTest_basci_vba when run under lsan.

However, tdf#92446 indicates that that innocent-looking change had rather dire
consequences.  So revert it and leave a fix for the memory leak to somebody who
actually understands all this code.

Change-Id: Ic81b1c14a1cfb07c6ec4415cc26b2f826adbc8ca
(cherry picked from commit 9d094b9f0a05d2ea62181201efb8f9e46ecfc8f1)